Add endpoint returning objects with horizontal coordinates
