# server/src/main/kotlin/ch/guengel/astro/server/ngc/PagedList.kt
@@ -1,9 +1,7 @@
 package ch.guengel.astro.server.ngc
 
-import ch.guengel.astro.server.model.NGCEntry
-
-data class PagedNGCEntryList(
-    val entryList: List<NGCEntry>,
+data class PagedList<T>(
+    val entryList: List<T>,
     val pageIndex: Int,
     val pageSize: Int,
     val numberOfPages: Int,
